# chessimg2pos

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: demo_usage.ipynb  train_model.ipynb
src/: chessdataset.py  generate_tiles.py  predictor.py  trainer.py
src/chessimg2pos/: __init__.py  chessboard_finder.py  chessboard_image.py  chessclassifier.py  chessdataset.py  constants.py  generate_chessboards.py  generate_tiles.py  model_loader.py  predictor.py  trainer.py  view_images.py
tests/: run_all.py  test_architectures.py  test_imports.py  test_pipeline.py  test_prediction.py  test_training.py
